--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-DhollmenCM kernel for Samsung Tab 2 compatible CyanogenMod 10.1
+DhollmenCM kernel for Samsung Tab 2 - CyanogenMod 10.1 compatible
 
 Version 3.0.31
 
@@ -6,7 +6,7 @@ Lastly synchronized with CyanogenMod / android_kernel_samsung_espresso10
 
 Credits to Kernel Team, Google, Samsung and anyone else with merit not listed here.
 
-HOW TO COMPILE
+*** HOW TO COMPILE ***
 
 # Sets environment
 export DIRE=$PWD/DhollmenCM
@@ -23,9 +23,11 @@ mkdir -p $KERNELDIR
 mkdir -p $DIRE/PowerVRSGX
 
 # Get omaplfb sources
-cd 	  $DIRE/PowerVRSGX
-git clone git://git.omapzoom.org/repo/graphics/omaplfb.git -b omaplfb-1.9 --depth 1
-git clone git://git.omapzoom.org/device/ti/proprietary-open.git -b d-jb-mr1-release --depth 1 
+cd $DIRE/PowerVRSGX
+git clone git://git.omapzoom.org/repo/graphics/omaplfb.git \
+	-b omaplfb-1.9 --depth 1
+git clone git://git.omapzoom.org/device/ti/proprietary-open.git \
+	-b d-jb-mr1-release --depth 1 
 
 # Get kernel sources
 cd $KERNELDIR
@@ -42,13 +44,13 @@ cp  ./arch/arm/configs/<file_name_config>  .config
 	dhollmen_P31XXHOT_defconfig	   P31xx device  HOT  
 
 # Compile
-make  ARCH=arm -j<n>
+make ARCH=arm -j<n>
 	
 	NOTE: 'n' may be the number of CPU cores + 1
 
 # Copy kernel image and modules
 rm -fr $DIRE/Modules/*
-cp   ./arch/arm/boot/zImage $DIRE/Zimage/
+cp ./arch/arm/boot/zImage $DIRE/Zimage/
 find . -type f -name *.ko -exec cp {} $DIRE/Modules/ \;
 
 # Compile omaplfb
@@ -59,10 +61,12 @@ tar -xzf proprietary-open/omap4/sgx_src/eurasia_km.tgz
 rm -rf eurasia_km/eurasiacon/binary*
 
 cd eurasia_km/eurasiacon/build/linux2/omap4430_android/
-make ARCH=arm TARGET_PRODUCT="blaze_tablet" BUILD=release TARGET_SGX=540 PLATFORM_VERSION=4.0
+make ARCH=arm TARGET_PRODUCT="blaze_tablet" BUILD=release \
+	 TARGET_SGX=540 PLATFORM_VERSION=4.0
 
 # Copy module and end
-cp ../../../binary2_540_120_omap4430_android_release/target/pvrsrvkm_sgx540_120.ko $DIRE/Modules
+cp  ../../../binary2_540_120_omap4430_android_release/target/pvrsrvkm_sgx540_120.ko \
+    $DIRE/Modules
 $CROSS_DIR/arm-none-linux-gnueabi-strip --strip-unneeded $DIRE/Modules/*.ko
 
 cd $DIRE
