--- a/README
+++ b/README
@@ -12,8 +12,8 @@ Credits to Kernel Team, Google, Samsung and anyone else with merit not listed he
 export DIRE=$PWD/DhollmenCM
 export KERNELDIR=$DIRE/DhollmenCM_kernel
 export ARCH=arm
-export CROSS_DIR=/opt/toolchains/arm-2010q1/bin
-export CROSS_COMPILE=$CROSS_DIR/arm-none-linux-gnueabi-
+export CROSS_DIR=/opt/toolchains/arm-eabi-linaro-4.7.20130317/bin
+export CROSS_COMPILE=$CROSS_DIR/arm-eabi-
 
 # Create directories
 mkdir -p $DIRE
