--- a/README
+++ b/README
@@ -12,8 +12,8 @@ Credits to Kernel Team, Google, Samsung and anyone else with merit not listed he
 export DIRE=$PWD/DhollmenCM
 export KERNELDIR=$DIRE/DhollmenCM_kernel
 export ARCH=arm
-export CROSS_DIR=/opt/toolchains/arm-eabi-linaro-4.7.20130317/bin
-export CROSS_COMPILE=$CROSS_DIR/arm-eabi-
+export CROSS_DIR=/opt/toolchains/arm-eabi-linaro-4.7.20130413/bin
+export CROSS_COMPILE=$CROSS_DIR/arm-linux-androideabi-
 
 # Create directories
 mkdir -p $DIRE
@@ -38,9 +38,9 @@ cp  ./arch/arm/configs/<file_name_config>  .config
 
 	NOTE: 'file_name_config' can be one of:
 	
-	dhollmen_P51XX_defconfig	   P51xx device
+	dhollmen_P51XX_defconfig	   Samsung P-51xx device
 	
-	dhollmen_P31XX_defconfig	   P31xx device
+	dhollmen_P31XX_defconfig	   Samsung P-31xx device
 
 # Compile
 make ARCH=arm -j<n>
