New update readme

--- a/README
+++ b/README
@@ -1,6 +1,4 @@
-DhollmenCM kernel for Samsung Tab 2 - CyanogenMod 10.1.0 compatible
-
-Version 3.0.39
+DhollmenCM kernel for Samsung Tab 2 - Version 3.0.39
 
 Lastly synchronized with CyanogenMod / android_kernel_samsung (_espresso10 & _espresso)
 
