Introducing some optimizations

--- a/README
+++ b/README
@@ -2,7 +2,7 @@ Dhollmen Kernel
 
 Copyright by their respective authors.
 Code not attributable to other is on my own authorship
-Credits to Kernel Team, Google, CyanogenMod, Samsung and anyone else with merit
+Credits to Kernel Team, Google, CyanogenMod, Samsung and anyone else with merits.
 
 *** HOW TO COMPILE ***
 
